---
source: compiler-core/src/fsharp/tests/lists.rs
expression: "\nfn go(x) {\n    []\n    [1]\n    [1, 2]\n    [1, 2, ..x]\n}\n"
---
module rec my.``mod``

let private go (x: list<int64>) = begin
    []
    [1L]
    [1L; 2L]
    [1L; 2L] @ x
end
